--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <header>
+      <h1> The Memory Match </h1>
+    </header>
+    <div id="root" class="cardbox"></div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
