--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,31 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Memory Match</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <h1> The Memory Match </h1>
-    </header>
-    <div id="root" class="cardbox"></div>
+    <section class="menu">
+      <img src="img/bulbasaur.png/">
+      <button id="play"> PLAY </button><br>
+      <!--<button>LEVEL</button><br>
+      <button>CARDS</button>-->
+      
+      <footer>
+        <h6> Developed by Vero Guzman <br> Github </h6>
+      </footer>
+    </section>
+    <section class="fondo">
+      <header>
+        <p> Poke - Match </p>
+      </header>
+      <div id="front" class="cardboxf"></div>
+      <div id="back" class="cardboxb"></div>
+
+    </section>
+   
     <script src="main.js" type="module"></script>
   </body>
 </html>
