--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Memory Match</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <section class="menu">
-      <img src="img/bulbasaur.png/">
-      <button id="play"> PLAY </button><br>
-      <!--<button>LEVEL</button><br>
-      <button>CARDS</button>-->
-      
-      <footer>
-        <h6> Developed by Vero Guzman <br> Github </h6>
-      </footer>
-    </section>
-    <section class="fondo">
-      <header>
-        <p> Poke - Match </p>
-      </header>
-      <div id="front" class="cardboxf"></div>
-      <div id="back" class="cardboxb"></div>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Memory Match</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <main>
+    <header class="title"> Poke - Match </header>
+    <section class="menu">
+      <button id="play"> Play </button>
+      <p id="aciertos">Aciertos: <br>0</p>
+      <p id="estaditicas">Temp.: <br>30 seg.</p>
+      <p id="movimientos">Mov.: <br>0</p>
+      <img src="img/bulbasaur.png/" alt="image">
     </section>
-   
+    <section class="containCard">
+      <div id="card"> <p>Poke - Match</p> </div>
+    </section>
+    <section class="decor">
+      <img src="img/bulbasaur.png/" alt="image">
+    </section>
+    <footer>Game developed by <a href="https://github.com/veroguzrob">Vero Guzman</a></footer>
     <script src="main.js" type="module"></script>
-  </body>
+  </main>
+</body>
+
 </html>
