Por fin se oculta el Pokemon

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
       <img src="img/bulbasaur.png/" alt="image">
     </section>
     <section class="containCard">
-      <div id="card"> <p>Poke - Match</p> </div>
+      <p>Poke - Match</p>
+      <div id="front" class="front"></div>
+      <div id="back" class="back"></div>
     </section>
     <section class="decor">
       <img src="img/bulbasaur.png/" alt="image">
