Se esta iniciando la funcionalidad de mostrar y esconder

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <main>
     <header class="title"> Poke - Match </header>
     <section class="menu">
-      <button id="play"> Play </button>
+      <button type="reset" id="play"> Play </button>
       <p id="aciertos">Aciertos: <br>0</p>
       <p id="estaditicas">Temp.: <br>30 seg.</p>
       <p id="movimientos">Mov.: <br>0</p>
@@ -20,8 +20,7 @@
     </section>
     <section class="containCard">
       <p>Poke - Match</p>
-      <div id="front" class="front"></div>
-      <div id="back" class="back"></div>
+     <div id="cards" class="back"></div>
     </section>
     <section class="decor">
       <img src="img/bulbasaur.png/" alt="image">
