las tarjetas que hacen match se quedan boca arriba

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <section class="menu">
       <button type="reset" id="play"> Play </button>
       <p id="aciertos">Aciertos: <br>0</p>
-      <p id="estaditicas">Temp.: <br>30 seg.</p>
+      <p id="tiempo">Temp.: <br>30 seg.</p>
       <p id="movimientos">Mov.: <br>0</p>
       <img src="img/bulbasaur.png/" alt="image">
     </section>
