--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,17 @@
   <main>
     <header class="title"> Poke - Match </header>
     <section class="menu">
-      <button type="reset" id="play"> Play </button>
       <p id="aciertos">Aciertos: <br>0</p>
       <p id="tiempo">Tiempo: <br>60 seg.</p>
       <p id="movimientos">Mov.: <br>0</p>
-      <img src="img/bulbasaur.png/" alt="image">
+      <img src="http://assets.stickpng.com/images/580b57fcd9996e24bc43c31a.png" alt="image">
     </section>
     <section class="containCard">
       <p>Poke - Match</p>
-     <div id="cards" class="back"></div>
+      <div id="cards" class="back"></div>
     </section>
     <section class="decor">
-      <img src="img/bulbasaur.png/" alt="image">
+      <img src="http://assets.stickpng.com/images/580b57fcd9996e24bc43c31a.png" alt="image">
     </section>
     <footer>Game developed by <a href="https://github.com/veroguzrob">Vero Guzman</a></footer>
     <script src="main.js" type="module"></script>
